--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-*.toc linguist-language=Game Maker Language
+*.yy linguist-language=JSON linguist-generated
